crates/mtui-tui/tests/snapshots/it__app__a_refused_save_jumps_to_the_field_at_fault.snap
---
source: crates/mtui-tui/tests/app.rs
expression: screen(&mut app)
---
"┌ SUSE:Maintenance:99999:999999 ───────────────────────────────────────────────────────────────────┐"
"│ summary │ people │ issues │ testing │ review │ update (read-only) │ install (read-only)          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│          incident                    71234                                                       │"
"│          patch                       SUSE-2026-1                                                 │"
"│          platform                    Other                                                       │"
"│          priority                    P2                                                          │"
"│          probability                 high                                                        │"
"│          product                     SUSE Linux Enterprise Server 15 SP6                         │"
"│      [-] ptf_packages                (1)                                                         │"
"│            #0                        examplepkg-ptf                                              │"
"│          reproducer                  steps to reproduce                                          │"
"│          requires_thirdparty         false                                                       │"
"│          resolution                  fixed upstream                                              │"
"│          scriptability               possible                                                    │"
"│          severity                    Major                                                       │"
"│          summary                     L3 incident summary                                         │"
"│        new                           true                                                        │"
"│        reproducer                    true                                                        │"
"│        severity                      major                                                       │"
"│>       status                        BOGUS                                                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ help ────────────────────────────────────────────────────────────────────────────────────────────┐"
"│/issues/bsc#1234567/status                                                                        │"
"│Validation outcome, null until answered.                                                          │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [modified]  0 unfilled  | save refused: /issues/bsc#1234567/status: unknown variant `BOGUS`, expect"
" Tab section  Up/Down move  Enter edit  Left/Right cycle  n null  Ctrl-S save  q quit  ? help       "
