crates/mtui-tui/tests/snapshots/it__app__an_open_enum_picker_lists_its_choices.snap
---
source: crates/mtui-tui/tests/app.rs
expression: screen(&mut app)
---
"┌ SUSE:Maintenance:46384:423755 ───────────────────────────────────────────────────────────────────┐"
"│ summary │ people │ issues │ testing │ review │ update (read-only) │ install (read-only)          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│>     verdict  (unset)                                                                            │"
"│      comment  (unset)                                                                            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                             ┌ /verdict ────────────────────────────┐                             │"
"│                             │> (unset)                             │                             │"
"│                             │  PASSED                              │                             │"
"│                             │  FAILED                              │                             │"
"│                             └──────────────────────────────────────┘                             │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ help ────────────────────────────────────────────────────────────────────────────────────────────┐"
"│/verdict                                                                                          │"
"│Overall tester verdict from the log's `SUMMARY:` line, null until decided.                        │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [unchanged]  25 unfilled                                                                           "
" Up/Down choose  Enter accept  Esc cancel                                                           "
