crates/mtui-tui/tests/snapshots/it__app__quitting_with_unsaved_changes_asks_first.snap
---
source: crates/mtui-tui/tests/app.rs
expression: screen(&mut app)
---
"┌ SUSE:Maintenance:46384:423755 ───────────────────────────────────────────────────────────────────┐"
"│ summary │ people │ issues │ testing │ review │ update (read-only) │ install (read-only)          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│>     verdict  PASSED                                                                             │"
"│      comment  (unset)                                                                            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                           ┌──────────────────────────────────────────┐                           │"
"│                           │Discard unsaved changes? (y/n)            │                           │"
"│                           └──────────────────────────────────────────┘                           │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ help ────────────────────────────────────────────────────────────────────────────────────────────┐"
"│/verdict                                                                                          │"
"│Overall tester verdict from the log's `SUMMARY:` line, null until decided.                        │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [modified]  24 unfilled                                                                            "
" y discard changes  n keep editing                                                                  "
