crates/mtui-tui/tests/snapshots/it__app__the_comment_editor_is_a_multi_line_modal.snap
---
source: crates/mtui-tui/tests/app.rs
expression: screen(&mut app)
---
"┌ SUSE:Maintenance:46384:423755 ───────────────────────────────────────────────────────────────────┐"
"│ summary │ people │ issues │ testing │ review │ update (read-only) │ install (read-only)          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│      verdict  (unset)                                                                            │"
"│>     comment  (unset)                                                                            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│              ┌ /comment ──────────────────────────────────────────────────────────┐              │"
"│              │first line                                                          │              │"
"│              │second line                                                         │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ help ────────────────────────────────────────────────────────────────────────────────────────────┐"
"│/comment                                                                                          │"
"│Report-level free text, from the `comment:` under `SUMMARY:`.                                     │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [unchanged]  25 unfilled                                                                           "
" Ctrl-S accept  Esc cancel                                                                          "
