crates/mtui-tui/tests/snapshots/it__app__the_first_screen_lists_the_summary_fields.snap
---
source: crates/mtui-tui/tests/app.rs
expression: screen(&mut app)
---
"┌ SUSE:Maintenance:46384:423755 ───────────────────────────────────────────────────────────────────┐"
"│ summary │ people │ issues │ testing │ review │ update (read-only) │ install (read-only)          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│>     verdict  (unset)                                                                            │"
"│      comment  (unset)                                                                            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ help ────────────────────────────────────────────────────────────────────────────────────────────┐"
"│/verdict                                                                                          │"
"│Overall tester verdict from the log's `SUMMARY:` line, null until decided.                        │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [unchanged]  25 unfilled                                                                           "
" Tab section  Up/Down move  Enter edit  Left/Right cycle  n null  Ctrl-S save  q quit  ? help       "
